refactor with kafka
