# receiver/app.py
@@ -1,12 +1,16 @@
 import connexion
 from connexion import NoContent
+from pykafka import KafkaClient
+from pykafka.exceptions import KafkaException, SocketDisconnectedError, LeaderNotAvailable
 from datetime import datetime
-import requests
+import json
+import time
 import yaml
 import logging
 import logging.config
 
-
+# Constants
+DATETIME_FORMAT = "%Y-%m-%dT%H:%M:%SZ"
 # Logging config variables
 with open('config/log_conf.yml', mode='r') as file:
     log_config = yaml.safe_load(file.read())
@@ -18,9 +22,9 @@ logger = logging.getLogger('receiver')
 with open('config/app_conf.yml', mode='r') as file:
     app_config = yaml.safe_load(file.read())
 
-SERVER_URL = app_config['eventstore']['url']
 SERVER_HOST = app_config['server']['host']
 SERVER_PORT = app_config['server']['port']
+SERVER_URI = app_config['events']['topic']
 
 # Endpoints
 def root():
@@ -34,17 +38,24 @@ def temperature(body):
         'timestamp': body['timestamp'], 
         'trace_id': body['trace_id']
     }
+    # convert payload for kafka
+    msg = {
+        'type': 'temperature', 
+        'datetime': datetime.now().strftime(DATETIME_FORMAT), 
+        'payload': payload
+    }
+    msg_str = json.dumps(msg)
+    
+    producer = topic.get_sync_producer()
     try:
-        res = requests.post(
-            url=f"{SERVER_URL}temperature", 
-            json=payload
-            )
-        # logger.debug(f"Event trace: {body['trace_id']}")
-        return NoContent, 202
-        
-    except requests.exceptions.ConnectionError as err:
-        logger.warning(f"Unable to connect to server. Error: {err}")
-        return 'Bad Gateway', 502
+        producer.produce(msg_str.encode('utf-8'))
+    except (SocketDisconnectedError, LeaderNotAvailable) as e:
+        producer = topic.get_sync_producer()
+        producer.stop()
+        producer.start()
+        producer.produce(msg_str.encode('utf-8'))
+
+    return NoContent, 201
 
 
 def environment(body):
@@ -58,22 +69,50 @@ def environment(body):
         'timestamp': body['timestamp'], 
         'trace_id': body['trace_id']
     }
+    # convert payload for kafka
+    msg = {
+        'type': 'environment', 
+        'datetime': datetime.now().strftime(DATETIME_FORMAT), 
+        'payload': payload
+    }
+    msg_str = json.dumps(msg)
+
+    producer = topic.get_sync_producer()
     try:
-        res = requests.post(
-            url=f"{SERVER_URL}environment", 
-            json=payload
-            )
-        # logger.debug(f"Event trace: {body['trace_id']}")
-        return NoContent, 202
+        producer.produce(msg_str.encode('utf-8'))
+    except (SocketDisconnectedError, LeaderNotAvailable) as e:
+        producer = topic.get_sync_producer()
+        producer.stop()
+        producer.start()
+        producer.produce(msg_str.encode('utf-8'))
 
-    except requests.exceptions.ConnectionError as err:
-        logger.warning(f"Unable to connect to server. Error: {err}")
-        return 'Bad Gateway', 502
+    return NoContent, 201
 
+# connect to kafka server
+def create_kafka_connection(max_retries: int, timeout: int):
+    count = 0
+    while count < max_retries:
+        try:
+            client = KafkaClient(hosts=f'{SERVER_HOST}:{SERVER_PORT}')
+            topic = client.topics[str.encode(SERVER_URI)]
+
+            return topic
+
+        except KafkaException as e:
+            logger.error(f"Connection failed - {e}")
+            time.sleep(timeout)
+            count += 1
+            continue
+
+    else:
+        logger.error(f"Connection failed - Unable to connect to kafka server. Max retries exceeded")
+        raise SystemExit
+
+topic = create_kafka_connection(max_retries=3, timeout=2)
 
 app = connexion.FlaskApp(__name__, specification_dir='openapi/')
 app.add_api('openapi.yml', strict_validation=True, validate_responses=True)
 
 
 if __name__ == '__main__':
-    app.run(port=8080, debug=True)
+    app.run(port=8080, debug=False)
